--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,5 +15,5 @@ services:
     build:
       context: .build
       args:
-        ELROND_VERSION: v1.0.16
-        CONFIG_VERSION: testnet-1016
+        ELROND_VERSION: ${ELROND_VERSION}
+        CONFIG_VERSION: ${CONFIG_VERSION}
