--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
-ELROND_VERSION=v1.0.17
-CONFIG_VERSION=testnet-1017
+ELROND_VERSION=v1.0.41
+CONFIG_VERSION=BoN-ph2-w2
+
+# Display name for you nodes
+NODE_DISPLAY_NAME_1=node1
+NODE_DISPLAY_NAME_2=node2
+NODE_DISPLAY_NAME_3=node3
+NODE_DISPLAY_NAME_4=node4
+NODE_DISPLAY_NAME_5=node5
+NODE_DISPLAY_NAME_6=node6
