--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-ELROND_VERSION=v1.0.41
-CONFIG_VERSION=BoN-ph2-w2
+ELROND_VERSION=v1.0.42
+CONFIG_VERSION=BoN-ph2-w3
 
 # Display name for you nodes
 NODE_DISPLAY_NAME_1=node1
@@ -8,3 +8,22 @@ NODE_DISPLAY_NAME_3=node3
 NODE_DISPLAY_NAME_4=node4
 NODE_DISPLAY_NAME_5=node5
 NODE_DISPLAY_NAME_6=node6
+
+### AUTOUPDATER
+# Use compose file for autoupdater (default: docker-compose.yml)
+USE_COMPOSE_FILE=docker-compose.yml
+
+# Important!!!
+# https://developer.github.com/v3/#rate-limiting
+# For unauthenticated requests, the rate limit allows for up to 60 requests per hour. 
+# Unauthenticated requests are associated with the originating IP address, and not the user making requests.
+RETRY_TIME_DONT_GET_TAG=35s
+RETRY_TIME_GET_TAG=5m
+
+# Your username and password for github. 
+# You are not required to enter it! Use at your own risk. 
+# This data is nowhere and not used in any way except to check the version of the application (for requests to the Github API, see the file autoupdater.sh).
+# q: Can I do without them? - yes, just leave the variable blank or comment out at all.
+# q: What will it give you? - You can execute not 60, but 5000 API requests to GitHub. (necessary if you want to increase the frequency of requesting versions of new tags)
+# example for using: GH_CREDENTIAL=-u login:password
+#GH_CREDENTIAL=
