--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-ELROND_VERSION=v1.0.42
-CONFIG_VERSION=BoN-ph2-w3
+ELROND_VERSION=v1.0.50
+CONFIG_VERSION=BoN-ph2-w3-p6
 
 # Display name for you nodes
 NODE_DISPLAY_NAME_1=node1
@@ -25,5 +25,5 @@ RETRY_TIME_GET_TAG=5m
 # This data is nowhere and not used in any way except to check the version of the application (for requests to the Github API, see the file autoupdater.sh).
 # q: Can I do without them? - yes, just leave the variable blank or comment out at all.
 # q: What will it give you? - You can execute not 60, but 5000 API requests to GitHub. (necessary if you want to increase the frequency of requesting versions of new tags)
-# example for using: GH_CREDENTIAL=-u login:password
+# example for using: GH_CREDENTIAL='-u login:password'
 #GH_CREDENTIAL=
