--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@master
+      # - uses: actions/checkout@master
       # - uses: actions/checkout@v1
       # - name: Build the Docker image
       #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
@@ -21,6 +21,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           dockerfile: ./.build/autoupdater.Dockerfile
+          registry: docker.pkg.github.com
 
       # - name: docker build
       #   uses: actions/docker/cli@master
