--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           name: mrz1703/elrond-node/autoupdater
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          dockerfile: ./.build/autoupdater.Dockerfile
+          # dockerfile: ./.build/autoupdater.Dockerfile
           registry: docker.pkg.github.com
 
       # - name: docker build
