--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,14 @@ jobs:
       #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
 
       - name: Publish to Registry
-        uses: elgohr/Publish-Docker-Github-Action@master
+        uses: HurricanKai/Publish-Docker-Github-Action@master
         with:
           name: mrz1703/elrond-node/autoupdater
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           # dockerfile: ./.build/autoupdater.Dockerfile
           registry: docker.pkg.github.com
+          cache: true
 
       # - name: docker build
       #   uses: actions/docker/cli@master
