--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,11 @@ jobs:
       - name: Publish to Registry
         uses: HurricanKai/Publish-Docker-Github-Action@master
         with:
-          name: mrz1703/elrond-node/autoupdater
+          name: mrz1703/elrond-node
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           # dockerfile: ./.build/autoupdater.Dockerfile
           registry: docker.pkg.github.com
-          cache: true
 
       # - name: docker build
       #   uses: actions/docker/cli@master
