--- a/.env
+++ b/.env
@@ -1,24 +1,9 @@
-ELROND_VERSION=v1.0.50
-CONFIG_VERSION=BoN-ph2-w3-p6
-
-# Display name for you nodes
-NODE_DISPLAY_NAME_1=node1
-NODE_DISPLAY_NAME_2=node2
-NODE_DISPLAY_NAME_3=node3
-NODE_DISPLAY_NAME_4=node4
-NODE_DISPLAY_NAME_5=node5
-NODE_DISPLAY_NAME_6=node6
-
-### AUTOUPDATER
-# Use compose file for autoupdater (default: docker-compose.yml)
-USE_COMPOSE_FILE=docker-compose.yml
-
 # Important!!!
 # https://developer.github.com/v3/#rate-limiting
 # For unauthenticated requests, the rate limit allows for up to 60 requests per hour. 
 # Unauthenticated requests are associated with the originating IP address, and not the user making requests.
-RETRY_TIME_DONT_GET_TAG=35s
-RETRY_TIME_GET_TAG=5m
+RETRY_TIME_IF_ERROR_GET_TAG=25s
+RETRY_TIME_GET_TAG=4m
 
 # Your username and password for github. 
 # You are not required to enter it! Use at your own risk. 
@@ -26,4 +11,4 @@ RETRY_TIME_GET_TAG=5m
 # q: Can I do without them? - yes, just leave the variable blank or comment out at all.
 # q: What will it give you? - You can execute not 60, but 5000 API requests to GitHub. (necessary if you want to increase the frequency of requesting versions of new tags)
 # example for using: GH_CREDENTIAL='-u login:password'
-#GH_CREDENTIAL=
+GH_CREDENTIAL=
